Truncated titles and prices of the imageComponent and fixed numbering of the items

--- a/client/src/views/schilderijen/Schilderijen.css
+++ b/client/src/views/schilderijen/Schilderijen.css
@@ -2,50 +2,3 @@
   display: flex;
   flex-flow: row wrap;
 }
-.item-container{
-  margin: 10px;
-  display: flex;
-  flex-grow: 1;
-  flex-flow: column nowrap;
-}
-
-.item-image{
-  /* max-height: 100%;
-  max-width: 100%; */
-  display: block;
-}
-
-.item-details{
-  display: flex;
-  flex-flow: row nowrap;
-  margin-top: 12px;
-}
-
-.item-details-text{
-  display: flex;
-  flex-flow: column nowrap;
-  flex-grow: 1;
-}
-
-.item-details-title{
-  font-size: 2em;
-  font-weight: bold;
-}
-
-.item-details-price{
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.item-details-action{
-  display: flex;
-  flex-flow: row nowrap;
-  align-self: center;
-}
-
-.item-details-action-button{
-  height: 50px;
-  width: 50px;
-  border: 1px solid black;
-}
